# rules_nextra

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CI_SETUP.md  LICENSE  QUICKSTART.md  README.md  TEST_COVERAGE.md  WORKSPACE  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: README-WORKFLOWS.md
.github/workflows/: ci.yml
docs/: mdx-server-api.md
examples/mdx-server/: BUILD.bazel
examples/mdx-server/pages/: api-docs.mdx
examples/standalone/: BUILD.bazel  next.config.js  theme.config.jsx
examples/standalone/pages/: index.mdx
nextra/: BUILD.bazel  defs.bzl  integration_test.ts
nextra/private/: nextra_common.bzl  nextra_common_test.ts  nextra_mdx_server.bzl  nextra_mdx_server_test.ts  nextra_standalone.bzl  nextra_standalone_test.ts
