load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# TypeScript project for the entire workspace
ts_project(
    name = "workspace_ts",
    srcs = glob([
        "**/*.ts",
    ], exclude = ["node_modules/**"]),
    declaration = True,
    tsconfig = "//:tsconfig.json",
)

# Simple filegroup targets for CI
filegroup(
    name = "workspace_lint",
    srcs = glob([
        "**/*.ts",
    ], exclude = ["node_modules/**"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_format",
    srcs = glob([
        "**/*.ts",
    ], exclude = ["node_modules/**"], allow_empty = True),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "workspace_tests",
    srcs = glob([
        "**/*_test.ts",
        "**/*.test.ts",
        "**/*.spec.ts",
    ], exclude = ["node_modules/**"], allow_empty = True),
    visibility = ["//visibility:public"],
)

# Convenience targets
filegroup(
    name = "all",
    srcs = [
        ":workspace_ts",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "docs",
    srcs = [
        "README.md",
    ],
    visibility = ["//visibility:public"],
)
